fix layout gap

--- a/src/index/components/cabinet/PageContainer/PageContainer.less
+++ b/src/index/components/cabinet/PageContainer/PageContainer.less
@@ -30,7 +30,7 @@
       width: 100%;
       flex: 0 0 auto;
       margin-left: 0;
-      margin-bottom: 24px;
+      margin-bottom: var(--gap-size);
     }
 
     .PageContainer__content {
