--- a/src/index/containers/cabinet/CabinetExchangeScreen/CabinetExchangeScreen.less
+++ b/src/index/containers/cabinet/CabinetExchangeScreen/CabinetExchangeScreen.less
@@ -4,6 +4,7 @@
   padding: 16px 8px;
   box-sizing: border-box;
   display: flex;
+  --gap-size: 8px;
 
   .Content_box {
     margin-top: 8px;
@@ -160,7 +161,7 @@
   display: block;
 
   .OrderBook {
-    margin-bottom: 8px;
+    margin-bottom: var(--gap-size);
   }
 
   .Exchange__disconnectModal__content {
