--- a/src/index/containers/cabinet/CabinetExchangeScreen/components/TradeForm/TradeForm.less
+++ b/src/index/containers/cabinet/CabinetExchangeScreen/components/TradeForm/TradeForm.less
@@ -150,7 +150,7 @@
 
 .adaptive {
   .TradeForm {
-    margin: 8px 0;
+    margin: var(--gap-size) 0;
   }
   .TradeForm__forms {
     width: 100%;
