--- a/src/index/containers/cabinet/CabinetInvestmentsScreen/CabinetInvestmentsScreen.less
+++ b/src/index/containers/cabinet/CabinetInvestmentsScreen/CabinetInvestmentsScreen.less
@@ -176,15 +176,12 @@
   .Investments__balances {
     display: block;
     width: 100%;
-    margin-top: 24px;
     background-color: var(--white);
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
     border-radius: 8px;
     box-sizing: border-box;
-    -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
-    -moz-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
+    margin-top: var(--gap-size);
     box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
+
     .Investments__balances__item__actions.empty {
       margin-left: 58px;
       width: calc(100% - 58px);
