--- a/src/index/containers/cabinet/CabinetProfileScreen/CabinetProfileScreen.less
+++ b/src/index/containers/cabinet/CabinetProfileScreen/CabinetProfileScreen.less
@@ -193,7 +193,7 @@
 
       & > div {
         flex: 0 0 auto;
-        margin: 0 0px;
+        margin: 0 calc(var(--gap-size) / 2);
         width: 192px;
       }
     }
