--- a/src/vars.less
+++ b/src/vars.less
@@ -100,10 +100,10 @@ body.theme-dark {
 
 
 body {
-  --gap-size: 8px;
+  --gap-size: 24px;
 
   &.adaptive {
-    --gap-size: 2px;
+    --gap-size: 16px;
   }
 }
 
